Squashed commit of the following:
commit 6d52efc5b039a06f991689535dd8abb65123ee22
Author: Alexander <nlr@users.noreply.github.com>
Date:   Sat Dec 31 09:17:05 2022 +0500

    2.0.0

commit 07e3180a7f8b32495272afa20995982bd6929a4c
Author: Alexander <nlr@users.noreply.github.com>
Date:   Sat Dec 31 09:09:23 2022 +0500

    update react to v18

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "colorflipper",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "chroma-js": "^2.4.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "vite",
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.4",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^2.2.0",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
